# mapvina-native-slint

./: .clang-format  .clang-format-ignore  .gitmodules  .tool-versions  AGENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  build_wgpu_native.bat  build_windows.bat  vcpkg-configuration.json  vcpkg.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build_windows.yml  format.yml  tests_rust.yml
cpp/: CMakeLists.txt  README.md  main.cpp  map_window.slint
cpp/src/: slint_maplibre_headless.cpp  slint_maplibre_headless.hpp
cpp/tests/: CMakeLists.txt
cpp/tests/unit/: custom_file_source_test.cpp  integration_test.cpp  slint_maplibre_headless_test.cpp
docs/: testing.md  testing_overview.md
docs/build_guides/: Linux_Ubuntu_24.md  Windows_11.md  macOS_Apple_Silicon.md
rust/: Cargo.toml  README.md  main.slint
rust/src/: main.rs  maplibre.rs
rust/src/maplibre/: headless.rs
rust/tests/: integration_tests.rs  maplibre_tests.rs
src/: m-map-view.slint  maplibre.slint
